# em-tasks

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: build.yml
data/: Binning4_image1.emi  Binning4_image1_1.ser
scripts/: export_and_stitch.py
src/em_tasks/: export.py  stitch.py
src/em_tasks/prefect_task/: export.py  stitch.py
src/em_tasks/task/: export.py  stitch.py
tests/: test_export.py
