[metadata]
name = em_tasks
description = Tasks used to export and stitch 2D EM data from .ser files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fmi-faim/em-tasks.git
author = Jan Eglinger
author_email = jan.eglinger@fmi.ch
license = GPL-3.0
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Testing
project_urls =
    Bug Tracker = https://github.com/fmi-faim/em-tasks/issues
    Documentation = https://github.com/fmi-faim/em-tasks#README.md
    Source Code = https://github.com/fmi-faim/em-tasks
    User Support = https://github.com/fmi-faim/em-tasks/issues

[options]
packages = find:
install_requires =
    ncempy
    numpy
    scikit-image
    scipy
    tifffile
python_requires = >=3.8
package_dir =
    = src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src
